--- a/src/LagoVista.Client.Core/Resources/ClientResources.resx
+++ b/src/LagoVista.Client.Core/Resources/ClientResources.resx
@@ -447,4 +447,16 @@
   <data name="ConfirmDelete_Title" xml:space="preserve">
     <value>Delete?</value>
   </data>
+  <data name="About_About" xml:space="preserve">
+    <value>About</value>
+  </data>
+  <data name="About_Privacy" xml:space="preserve">
+    <value>Privacy Statement</value>
+  </data>
+  <data name="About_TermsAndConditions" xml:space="preserve">
+    <value>Terms and Conditions</value>
+  </data>
+  <data name="About_Version" xml:space="preserve">
+    <value>Version:</value>
+  </data>
 </root>
