add support for secert field type

--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Resources/SampleResources.resx
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/Resources/SampleResources.resx
@@ -159,6 +159,9 @@
   <data name="Model1_Password" xml:space="preserve">
     <value>Password</value>
   </data>
+  <data name="Model1_Secret" xml:space="preserve">
+    <value>SecretField</value>
+  </data>
   <data name="Model1_TextField1" xml:space="preserve">
     <value>Text Field</value>
   </data>
