ui updates and point user reg to server

--- a/src/LagoVista.Client.Core/Resources/ClientResources.resx
+++ b/src/LagoVista.Client.Core/Resources/ClientResources.resx
@@ -334,10 +334,10 @@
     <value>Enter your email address</value>
   </data>
   <data name="SendResetPasswordLink_Help" xml:space="preserve">
-    <value>If you forgot your password, you can have a link sent to your email address to let you reset it to a new one.</value>
+    <value>Please enter the email address you used to create your NuvIoT account and press Send Link. You will receive an email with a link that will allow you to reset your password.</value>
   </data>
   <data name="SendResetPasswordLink_Message" xml:space="preserve">
-    <value>If you have entered an email address associated with a valid account, you will receive an email with instructions for resetting your password.</value>
+    <value>If your email account is in the system, you will be sent a message with a link you can use to reset your password. If you do not receive a Password Reset Email within 5 minutes, please check your junk or other folder.</value>
   </data>
   <data name="SendResetPasswordLink_Title" xml:space="preserve">
     <value>Reset your Password</value>
