WIP - working, most UI looking good

--- a/src/LagoVista.XPlat.Core/Resources/XPlatResources.resx
+++ b/src/LagoVista.XPlat.Core/Resources/XPlatResources.resx
@@ -132,6 +132,9 @@
   <data name="Common_NoConnection" xml:space="preserve">
     <value>There does not appear to be a connection to the internet, please check your connectoin and try again .ater.</value>
   </data>
+  <data name="Common_Select" xml:space="preserve">
+    <value>-select-</value>
+  </data>
   <data name="Common_Yes" xml:space="preserve">
     <value>Yes</value>
   </data>
