--- a/Apps/buglog/BugLog/BugLogResources.resx
+++ b/Apps/buglog/BugLog/BugLogResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AppName" xml:space="preserve">
-    <value>BugLog - Marine</value>
+    <value>Software Logistics Bug/Log</value>
   </data>
   <data name="Common_Exit" xml:space="preserve">
     <value>Exit</value>
